package org.example.model;

public enum EstadoEntrada {
    ACTIVA, CANCELADA
}
